--- a/index.html
+++ b/index.html
@@ -2572,14 +2572,38 @@
     }
 
     async function extraerTextoURL(url) {
-      const response = await fetch(`https://api.allorigins.win/get?url=${encodeURIComponent(url)}`);
-      const data = await response.json();
-      const parser = new DOMParser();
-      const doc = parser.parseFromString(data.contents, 'text/html');
-      ['script', 'style', 'nav', 'header', 'footer', 'aside'].forEach(tag => {
-        doc.querySelectorAll(tag).forEach(el => el.remove());
-      });
-      return doc.body.innerText.trim();
+      const sanitizeDoc = (html) => {
+        const parser = new DOMParser();
+        const doc = parser.parseFromString(html, 'text/html');
+        ['script', 'style', 'nav', 'header', 'footer', 'aside'].forEach((tag) => {
+          doc.querySelectorAll(tag).forEach((el) => el.remove());
+        });
+        return doc.body.innerText.trim();
+      };
+
+      const fuentes = [
+        (u) => `https://r.jina.ai/${u.replace(/^https?:\/\//, '')}`,
+        (u) => `https://api.allorigins.win/raw?url=${encodeURIComponent(u)}`,
+        (u) => `https://api.codetabs.com/v1/proxy?quest=${encodeURIComponent(u)}`
+      ];
+
+      let ultimoError = null;
+      for (const builder of fuentes) {
+        try {
+          const endpoint = builder(url);
+          const response = await fetch(endpoint);
+          if (!response.ok) throw new Error(`Status ${response.status}`);
+          const text = await response.text();
+          const contenido = text?.includes('<') ? sanitizeDoc(text) : text?.trim();
+          if (contenido) return contenido;
+        } catch (error) {
+          ultimoError = error;
+          console.warn('⚠️ Fallback CORS proxy falló', error);
+          continue;
+        }
+      }
+
+      throw new Error(ultimoError?.message || 'No se pudo obtener el contenido de la URL');
     }
 
     // --- Database ---
@@ -4109,6 +4133,23 @@
       mostrarApiKeySetupModal();
     }
 
+    async function guardarPreferenciaVoz(nombre) {
+      try {
+        localStorage.setItem('vozSeleccionada', nombre);
+        if (currentUser?.uid && isFirebaseAvailable()) {
+          await firebase.firestore().collection('users').doc(currentUser.uid).set({
+            preferences: {
+              voice: nombre,
+              speed: velocidadActual,
+              language: currentLanguage
+            }
+          }, { merge: true });
+        }
+      } catch (error) {
+        console.warn('No se pudo guardar la preferencia de voz', error);
+      }
+    }
+
     async function loadUserSettings(userId) {
       try {
         authLog('📥 Cargando configuración de usuario', { userId });
@@ -4449,9 +4490,9 @@
           <button class="btn-play">▶</button>
         `;
         card.querySelector('.btn-play').addEventListener('click', () => previewVoice(voz.nombre));
-        card.addEventListener('click', () => {
+        card.addEventListener('click', async () => {
           vozSeleccionada = voz.nombre;
-          localStorage.setItem('vozSeleccionada', vozSeleccionada);
+          await guardarPreferenciaVoz(vozSeleccionada);
           renderVoices();
           actualizarAvatarVoz(vozSeleccionada);
           setVoiceSystem(userGoogleTTSKey ? 'google' : 'browser', vozSeleccionada);
@@ -5434,6 +5475,11 @@
       if (!file) return;
       await procesarArchivoSeleccionado(file);
     });
+
+    async function procesarImagenParaOCR(file) {
+      if (!file) return;
+      await procesarImagenesParaOCR([file]);
+    }
 
     async function procesarImagenesParaOCR(fileList) {
       const files = Array.from(fileList).filter((f) => f.type.startsWith('image/'));
